Corrected mobile width overflow

--- a/wp-content/themes/scci/common/style/_content.scss
+++ b/wp-content/themes/scci/common/style/_content.scss
@@ -1,7 +1,10 @@
-.content {
+.content, html {
   margin: 0;
   overflow-x: hidden;
+  max-width: 100vw;
+}
 
+.content {
   .logo-img {
     position: relative;
     display: none;
